--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 <body>
     <div id="fokeret">
         <div id="fejlec">
-
+            <div id="menu">
+                <img src="feladat/képek/logo.png" id="logo">
+                <ul>
+                    <li>home</li>
+                    <li>angebot</li>
+                    <li>preise</li>
+                    <li>kurse</li>
+                    <li>trainer</li>
+                    <li>übungen</li>
+                    <li>kontakt</li>
+                    <li>Free Intro</li>
+                </ul>
+            </div>
+            <img src="feladat/képek/header.jpg" id="fejlec_img">
         </div>
         <div id="box">
 
