--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             </div>
             <div id="header">
                 <p>Werde gesünder.<br>Werde fitter.<br>Werde glücklicher.</p>
-                <li>Free Intro</li>
+                <li class="feher_box">Free Intro</li>
                 <p>Sprich mit einem Coach. Setze deine Ziele. Mache einen Plan.</p>
             </div>
         </div>
         <div id="box">
             <div id="box_video">
-                
+                <img src="feladat/képek/video.PNG" alt="">
             </div>
             <div id="box_r">
                 <h1>die box</h1>
@@ -43,7 +43,7 @@
                 Neugierig? Komm vorbei!</p>
                     
                 <p>Hier ist zündstoff. </p>
-                <li>Mehr erfahren</li>
+                <li class="narancs_box">Mehr erfahren</li>
             </div>
         </div>
         <div id="dich">
@@ -62,7 +62,7 @@
                 <p>Du möchtest Kraft aufbauen und deine Bewegung verbessern? Beugen und drücken, heben und ziehen. Die Kraft-Grundübungen und Gewichtheben stehen hier im Fokus. Wir arbeiten in erster Linie an korrekter Ausführung der Kraftübungen und der Technik für Snatch und Clean and Jerk.
                 “Every day without squatting is a day closer to the day you can't squat.”</p>
             </div>
-            <li>Mehr erfahren</li>
+            <li class="narancs_box">Mehr erfahren</li>
         </div>
         <div id="training">
             <div id="train_img">
@@ -75,29 +75,29 @@
                 Du dokumentierst deine Ergebnisse und Zeiten in einer App (wir nutzen SugarWOD). Damit werden auch kleine Veränderungen sichtbar. <br>
                 Jedes Training kann an jedes Fitnesslevel angepasst werden. So ist es möglich, verschiedene Level in einer Gruppe zu trainieren und gemeinsam das Workout zu beenden. High Five für alle. Der Letzte bekommt den lautesten Applaus. Du bist nicht allein. <br>
                 Das ist CrossFit. Das ist zündstoff.</p>
-                <li>zu den Übungen</li>
+                <li class="narancs_box">zu den Übungen</li>
             </div>
         </div>
         <div id="preise">
             <h1>preise & aktuelles</h1>
             <p>Wir bieten Mitgliedschaften an, die sich nach deinen Zielen und Bedürfnissen unserer Member richten. Erfahre mehr über unsere Preise und klicke auf den Link.</p>
-            <li>mehr zu Preisen erfahren</li>
+            <li class="narancs_box">mehr zu Preisen erfahren</li>
             <div id="preise_l">
                 <h2>newsletter</h2>
                 <p>Stay tuned! Melde dich für unseren Newsletter an und wir informieren dich regelmäßig über den aktuellen Trainingszyklus, bevorstehende Events oder andere wichtige News aus der Box.</p>
-                <li>Newsletter abonnieren</li>
+                <li class="narancs_box">Newsletter abonnieren</li>
             </div>
             <div id="preise_c">
                 <h2>gutschein</h2>
                 <p>Du möchtest einen Gutschein verschenken? Gute Idee! <br>
                 Du entscheidest selbst, welchen Wert der Gutschein haben soll. <br>
                 Einfach dem Link folgen. Motiv auswählen. Betrag eingeben. Easy.</p>
-                <li>jetzt Gutschein erstellen</li>
+                <li class="narancs_box">jetzt Gutschein erstellen</li>
             </div>
             <div id="preise_r">
                 <h2>drop-in</h2>
                 <p>Einmal trainieren und die Box ausprobieren. Perfekt für alle, die kurz in der Stadt sind. Melde dich einfach direkt über unseren Kursplan an.</p>
-                <li>zum Kursplan</li>
+                <li class="narancs_box">zum Kursplan</li>
             </div>
         </div>
         <div id="osztott">
