--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
                 </ul>
             </div>
             <div id="header">
-                <p>Werde gesünder.<br>Werde fitter.<br>Werde glücklicher.</p>
-                <li class="feher_box">Free Intro</li>
-                <p>Sprich mit einem Coach. Setze deine Ziele. Mache einen Plan.</p>
+                <div id="header_text">
+                    <strong>Werde gesünder.</strong><br>
+                    <strong>Werde fitter.</strong><br>
+                    <strong>Werde glücklicher.</strong><br>
+                    <li class="feher_box">Free Intro</li>
+                    <p>Sprich mit einem Coach. Setze deine Ziele. Mache einen Plan.</p>
+                </div>
             </div>
         </div>
         <div id="box">
@@ -47,8 +51,10 @@
             </div>
         </div>
         <div id="dich">
-            <h1>zündstoff für dich</h1>
-            <h2>unser Kursplan</h2>
+            <div id="dich_title">
+                <h1>zündstoff für dich</h1>
+                <h2>unser Kursplan</h2>
+            </div>
             <div id="wod">
                 <h2>wod</h2>
                 <p>Workout of the Day. Das ist CrossFit in Reinform. Ein CrossFit Kurs hat 60 Minuten. Nach einem Warm up gibt es oft einen Skill- oder Kraftteil. Danach ein Workout und schließlich das Cool Down. Das Workout ist je nach Zielsetzung unterschiedlich lang und besteht aus unterschiedlichen Übungen. Variabel und intensiv.</p>
