--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zündstoff</title>
     <link rel="stylesheet" href="index.css">
+    <style>
+        @import url("https://use.typekit.net/rpf2ale.css");
+    </style>
 </head>
 <body>
     <div id="fokeret">
@@ -33,28 +36,32 @@
             </div>
         </div>
         <div id="box">
-            <div id="box_video">
-                <img src="feladat/képek/video.PNG" alt="">
-            </div>
-            <div id="box_r">
-                <h1>die box</h1>
-                <p>Endlich eine Box im Süden von Berlin! Du kommst aus Marienfelde, Lichtenrade, Mariendorf oder Mahlow? Dann ist zündstoff CrossFit dein place to be! <br>
-                Wir sind für dich auch aus anderen Bezirken super erreichbar. Vom Südkreuz bist du in 15 Minuten mit den Öffis bei uns. </p>
+            <div id="box_tart">
+                <div id="box_video">
+                    <img src="feladat/képek/video.PNG" alt="">
+                </div>
+                <div id="box_r">
+                    <h1>die box</h1>
+                    <p>Endlich eine Box im Süden von Berlin! Du kommst aus Marienfelde, Lichtenrade, Mariendorf oder Mahlow? Dann ist zündstoff CrossFit dein place to be! <br>
+                    Wir sind für dich auch aus anderen Bezirken super erreichbar. Vom Südkreuz bist du in 15 Minuten mit den Öffis bei uns. </p>
                     
-                <p>Unsere umgebaute Industriehalle erwartet dich und bietet viel Platz zum Trainieren, Freunde treffen, fitter und gesünder werden.
-                Du wirst arbeiten. Du wirst schwitzen. Du wirst Muskelkater haben. Es wird sich lohnen. Du wirst deine Grenzen verschieben. Du wirst Fortschritte machen. Du wirst beweglicher. Du wirst stärker. Du wirst dich besser fühlen.
-                Das alles machst du mit hochwertiger Ausstattung und unter professioneller Anleitung. Kein Schnickschnack.
-                Neugierig? Komm vorbei!</p>
+                    <p>Unsere umgebaute Industriehalle erwartet dich und bietet viel Platz zum Trainieren, Freunde treffen, fitter und gesünder werden.
+                    Du wirst arbeiten. Du wirst schwitzen. Du wirst Muskelkater haben. Es wird sich lohnen. Du wirst deine Grenzen verschieben. Du wirst Fortschritte machen. Du wirst beweglicher. Du wirst stärker. Du wirst dich besser fühlen.
+                    Das alles machst du mit hochwertiger Ausstattung und unter professioneller Anleitung. Kein Schnickschnack.
+                    Neugierig? Komm vorbei!</p>
                     
-                <p>Hier ist zündstoff. </p>
-                <li class="narancs_box">Mehr erfahren</li>
+                    <p>Hier ist zündstoff. </p>
+                    <li class="narancs_box">Mehr erfahren</li>
+                </div>
             </div>
         </div>
         <div id="dich">
+            <div id="dich_tart">
             <div id="dich_title">
                 <h1>zündstoff für dich</h1>
                 <h2>unser Kursplan</h2>
             </div>
+            <div id="dich_text">
             <div id="wod">
                 <h2>wod</h2>
                 <p>Workout of the Day. Das ist CrossFit in Reinform. Ein CrossFit Kurs hat 60 Minuten. Nach einem Warm up gibt es oft einen Skill- oder Kraftteil. Danach ein Workout und schließlich das Cool Down. Das Workout ist je nach Zielsetzung unterschiedlich lang und besteht aus unterschiedlichen Übungen. Variabel und intensiv.</p>
@@ -68,8 +75,10 @@
                 <p>Du möchtest Kraft aufbauen und deine Bewegung verbessern? Beugen und drücken, heben und ziehen. Die Kraft-Grundübungen und Gewichtheben stehen hier im Fokus. Wir arbeiten in erster Linie an korrekter Ausführung der Kraftübungen und der Technik für Snatch und Clean and Jerk.
                 “Every day without squatting is a day closer to the day you can't squat.”</p>
             </div>
-            <li class="narancs_box">Mehr erfahren</li>
         </div>
+        <li class="narancs_box">Mehr erfahren</li>
+        </div>
+    </div>
         <div id="training">
             <div id="train_img">
 
