--- a/index.html
+++ b/index.html
@@ -57,62 +57,71 @@
         </div>
         <div id="dich">
             <div id="dich_tart">
-            <div id="dich_title">
-                <h1>zündstoff für dich</h1>
-                <h2>unser Kursplan</h2>
-            </div>
-            <div id="dich_text">
-            <div id="wod">
-                <h2>wod</h2>
-                <p>Workout of the Day. Das ist CrossFit in Reinform. Ein CrossFit Kurs hat 60 Minuten. Nach einem Warm up gibt es oft einen Skill- oder Kraftteil. Danach ein Workout und schließlich das Cool Down. Das Workout ist je nach Zielsetzung unterschiedlich lang und besteht aus unterschiedlichen Übungen. Variabel und intensiv.</p>
-            </div>
-            <div id="basics">
-                <h2>basics</h2>
-                <p>Diese Einführungskurse führen dich an CrossFit-typische Übungen heran. Du lernst hier neue Bewegungen und Techniken für dein CrossFit Training und wie du sie für dich anpassen kannst. Fitter wirst du nebenbei.</p>
-            </div>
-            <div id="strength">
-                <h2>strength</h2>
-                <p>Du möchtest Kraft aufbauen und deine Bewegung verbessern? Beugen und drücken, heben und ziehen. Die Kraft-Grundübungen und Gewichtheben stehen hier im Fokus. Wir arbeiten in erster Linie an korrekter Ausführung der Kraftübungen und der Technik für Snatch und Clean and Jerk.
-                “Every day without squatting is a day closer to the day you can't squat.”</p>
+                <div id="dich_title">
+                    <h1>zündstoff für dich</h1>
+                    <h2>unser Kursplan</h2>
+                </div>
+                <div id="dich_text">
+                    <div id="wod">
+                        <h2>wod</h2>
+                        <p>Workout of the Day. Das ist CrossFit in Reinform. Ein CrossFit Kurs hat 60 Minuten. Nach einem Warm up gibt es oft einen Skill- oder Kraftteil. Danach ein Workout und schließlich das Cool Down. Das Workout ist je nach Zielsetzung unterschiedlich lang und besteht aus unterschiedlichen Übungen. Variabel und intensiv.</p>
+                    </div>
+                    <div id="basics">
+                        <h2>basics</h2>
+                        <p>Diese Einführungskurse führen dich an CrossFit-typische Übungen heran. Du lernst hier neue Bewegungen und Techniken für dein CrossFit Training und wie du sie für dich anpassen kannst. Fitter wirst du nebenbei.</p>
+                    </div>
+                    <div id="strength">
+                        <h2>strength</h2>
+                        <p>Du möchtest Kraft aufbauen und deine Bewegung verbessern? Beugen und drücken, heben und ziehen. Die Kraft-Grundübungen und Gewichtheben stehen hier im Fokus. Wir arbeiten in erster Linie an korrekter Ausführung der Kraftübungen und der Technik für Snatch und Clean and Jerk.
+                        “Every day without squatting is a day closer to the day you can't squat.”</p>
+                    </div>
+                </div>
+                <li class="narancs_box">Mehr erfahren</li>
             </div>
         </div>
-        <li class="narancs_box">Mehr erfahren</li>
-        </div>
-    </div>
         <div id="training">
-            <div id="train_img">
-
-            </div>
-            <div id="train_r">
-                <p>Was ist CrossFit? Kann ich das?</p>
-                <p>Ja, du kannst. Jeder kann das - unabhängig vom Alter oder Fitnesslevel. Wir holen dich da ab, wo du stehst. <br>
-                CrossFit Training bedeutet hochintensives und variables Training. Alle Bereiche (u.a. Kraft, Schnelligkeit, Ausdauer, Koordination) werden angesprochen und verbessert. Durch das Programming kommt sinnvolle Abwechslung in die Trainingstage. <br>
-                Du dokumentierst deine Ergebnisse und Zeiten in einer App (wir nutzen SugarWOD). Damit werden auch kleine Veränderungen sichtbar. <br>
-                Jedes Training kann an jedes Fitnesslevel angepasst werden. So ist es möglich, verschiedene Level in einer Gruppe zu trainieren und gemeinsam das Workout zu beenden. High Five für alle. Der Letzte bekommt den lautesten Applaus. Du bist nicht allein. <br>
-                Das ist CrossFit. Das ist zündstoff.</p>
-                <li class="narancs_box">zu den Übungen</li>
+            <div id="train_tart">
+                <div id="train_img">
+                    <img src="feladat/képek/kez.jpg" alt="">
+                </div>
+                <div id="train_r">
+                    <h1>das training</h1>
+                    <p>Was ist CrossFit? Kann ich das?</p>
+                    <p>Ja, du kannst. Jeder kann das - unabhängig vom Alter oder Fitnesslevel. Wir holen dich da ab, wo du stehst. <br>
+                    CrossFit Training bedeutet hochintensives und variables Training. Alle Bereiche (u.a. Kraft, Schnelligkeit, Ausdauer, Koordination) werden angesprochen und verbessert. Durch das Programming kommt sinnvolle Abwechslung in die Trainingstage. <br>
+                    Du dokumentierst deine Ergebnisse und Zeiten in einer App (wir nutzen SugarWOD). Damit werden auch kleine Veränderungen sichtbar. <br>
+                    Jedes Training kann an jedes Fitnesslevel angepasst werden. So ist es möglich, verschiedene Level in einer Gruppe zu trainieren und gemeinsam das Workout zu beenden. High Five für alle. Der Letzte bekommt den lautesten Applaus. Du bist nicht allein. <br>
+                    Das ist CrossFit. Das ist zündstoff.</p>
+                    <li class="narancs_box">zu den Übungen</li>
+                </div>
             </div>
         </div>
         <div id="preise">
-            <h1>preise & aktuelles</h1>
-            <p>Wir bieten Mitgliedschaften an, die sich nach deinen Zielen und Bedürfnissen unserer Member richten. Erfahre mehr über unsere Preise und klicke auf den Link.</p>
-            <li class="narancs_box">mehr zu Preisen erfahren</li>
-            <div id="preise_l">
-                <h2>newsletter</h2>
-                <p>Stay tuned! Melde dich für unseren Newsletter an und wir informieren dich regelmäßig über den aktuellen Trainingszyklus, bevorstehende Events oder andere wichtige News aus der Box.</p>
-                <li class="narancs_box">Newsletter abonnieren</li>
-            </div>
-            <div id="preise_c">
-                <h2>gutschein</h2>
-                <p>Du möchtest einen Gutschein verschenken? Gute Idee! <br>
-                Du entscheidest selbst, welchen Wert der Gutschein haben soll. <br>
-                Einfach dem Link folgen. Motiv auswählen. Betrag eingeben. Easy.</p>
-                <li class="narancs_box">jetzt Gutschein erstellen</li>
-            </div>
-            <div id="preise_r">
-                <h2>drop-in</h2>
-                <p>Einmal trainieren und die Box ausprobieren. Perfekt für alle, die kurz in der Stadt sind. Melde dich einfach direkt über unseren Kursplan an.</p>
-                <li class="narancs_box">zum Kursplan</li>
+            <div id="preise_tart">
+                <div id="preise_top">
+                    <h1>preise & aktuelles</h1>
+                    <p>Wir bieten Mitgliedschaften an, die sich nach deinen Zielen und Bedürfnissen unserer Member richten. Erfahre mehr über unsere Preise und klicke auf den Link.</p>
+                    <li class="narancs_box">mehr zu Preisen erfahren</li>
+                </div>
+                <div id="preise_bot">
+                    <div id="preise_l">
+                        <h2>newsletter</h2>
+                        <p>Stay tuned! Melde dich für unseren Newsletter an und wir informieren dich regelmäßig über den aktuellen Trainingszyklus, bevorstehende Events oder andere wichtige News aus der Box.</p>
+                        <li class="narancs_box">Newsletter abonnieren</li>
+                    </div>
+                    <div id="preise_c">
+                        <h2>gutschein</h2>
+                        <p>Du möchtest einen Gutschein verschenken? Gute Idee! <br>
+                        Du entscheidest selbst, welchen Wert der Gutschein haben soll. <br>
+                        Einfach dem Link folgen. Motiv auswählen. Betrag eingeben. Easy.</p>
+                        <li class="narancs_box">jetzt Gutschein erstellen</li>
+                    </div>
+                    <div id="preise_r">
+                        <h2>drop-in</h2>
+                        <p>Einmal trainieren und die Box ausprobieren. Perfekt für alle, die kurz in der Stadt sind. Melde dich einfach direkt über unseren Kursplan an.</p>
+                        <li class="narancs_box">zum Kursplan</li>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="osztott">
