--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <style>
         @import url("https://use.typekit.net/rpf2ale.css");
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
 </head>
 <body>
@@ -27,10 +28,10 @@
             </div>
             <div id="header">
                 <div id="header_text">
-                    <strong>Werde gesünder.</strong><br>
-                    <strong>Werde fitter.</strong><br>
-                    <strong>Werde glücklicher.</strong><br>
-                    <li class="feher_box">Free Intro</li>
+                    <p><strong>Werde gesünder.</strong></p>
+                    <p><strong>Werde fitter.</strong></p>
+                    <p><strong>Werde glücklicher.</strong></p>
+                    <li class="narancs_box">Free Intro</li>
                     <p>Sprich mit einem Coach. Setze deine Ziele. Mache einen Plan.</p>
                 </div>
             </div>
@@ -126,58 +127,78 @@
         </div>
         <div id="osztott">
             <div id="oszt_l">
-                <h1>starte heute</h1>
-                <p>CrossFit ist noch neu für dich? <br>
-                Du suchst nach einer neuen Box?<br>
-                Du brauchst einen Funken um deine Flamme zu entzünden?</p>
-                <p>Sprich mit einem Coach. Setze deine Ziele. Mache einen Plan.</p>
-                <li>mehr erfahren</li>
+                <div id="oszt_l_t">
+                    <h1>starte heute</h1>
+                    <p>CrossFit ist noch neu für dich? <br>
+                    Du suchst nach einer neuen Box?<br>
+                    Du brauchst einen Funken um deine Flamme zu entzünden?</p>
+                    <p>Sprich mit einem Coach. Setze deine Ziele. Mache einen Plan.</p>
+                    <li class="narancs_box">mehr erfahren</li>
+                </div>
             </div>
             <div id="oszt_c">
-                <h1>gruppentraining</h1>
-                <p>Werde gesünder.</p>
-                <p>Schliesse Freundschaften.</p>
-                <p>Sei glücklicher.</p>
-                <p>Werde Teil unserer Gemeinschaft und erreiche deine Ziele schneller mit Gruppentraining.</p>
-                <li>Free Intro</li>
+                <div id="oszt_c_t">
+                    <h1>gruppentraining</h1>
+                    <p>Werde gesünder.</p>
+                    <p>Schliesse Freundschaften.</p>
+                    <p>Sei glücklicher.</p>
+                    <p>Werde Teil unserer Gemeinschaft und erreiche deine Ziele schneller mit Gruppentraining.</p>
+                    <li class="narancs_box">Free Intro</li>
+                </div>
             </div>
             <div id="oszt_r">
-                <h1>personal training</h1>
-                <p>Echte Resultate, nur schneller.</p>
-                <p>Arbeite mit einem unserer erfahrenen Coaches, um deine Ziele schneller zu erreichen und erhalte die Aufmerksamkeit, die du verdienst.</p>
-                <li>Free intro</li>
+                <div id="oszt_r_t">
+                    <h1>personal training</h1>
+                    <p>Echte Resultate, nur schneller.</p>
+                    <p>Arbeite mit einem unserer erfahrenen Coaches, um deine Ziele schneller zu erreichen und erhalte die Aufmerksamkeit, die du verdienst.</p>
+                    <li class="narancs_box">Free intro</li>
+                </div>
             </div>
         </div>
         <div id="mission">
-            <div id="miss_img">
-
+            <div id="miss_tart">
+                <div id="miss_img">
+                    <img src="feladat/képek/sulyzo.jpg" alt="">
+                </div>
+                <div id="miss_r">
+                    <h1>mission</h1>
+                    <p>Bleib gesund! Das hört man sehr oft. Gesundheit ist vielleicht das höchste Gut. Aber was bedeutet das? Bedeutet gesund sein gerade keinen Schnupfen zu haben? Oder bedeutet es mehr?<br>Wir glauben, zum gesund sein gehört etwas mehr - mehr als nur gerade keine Krankheit zu haben. Wir glauben dazu gehört auch sich wohlzufühlen, zufrieden mit sich zu sein, sich stark zu fühlen.<br> Die Steigerung ist Fitness: das Gefühl gewappnet zu sein, für was auch immer da kommen mag. Zu keiner Zeit im Leben wird uns das geschenkt. Wir müssen etwas dafür tun. Auch im hohen Alter. Ausgewogene Ernährung und Bewegung - das würde wohl jeder raten. <br>Du willst die U-Bahn Treppe hochgehen, ohne danach eine Pause zu brauchen? Du willst ohne Stöhnen von der Couch aufstehen? Du willst auch mit 80+ ohne Hilfe vom Klo aufstehen? Was hält dich zurück? Fang jetzt an.</p>
+                    <p>Hier ist zündstoff.</p>
+                    <li class="narancs_box">zu den Übungen</li>
+                </div>
             </div>
-            <div id="miss_r">
-                <h1>mission</h1>
-                <p>Bleib gesund! Das hört man sehr oft. Gesundheit ist vielleicht das höchste Gut. Aber was bedeutet das? Bedeutet gesund sein gerade keinen Schnupfen zu haben? Oder bedeutet es mehr? <br>
-                Wir glauben, zum gesund sein gehört etwas mehr - mehr als nur gerade keine Krankheit zu haben. Wir glauben dazu gehört auch sich wohlzufühlen, zufrieden mit sich zu sein, sich stark zu fühlen. <br>
-                Die Steigerung ist Fitness: das Gefühl gewappnet zu sein, für was auch immer da kommen mag. Zu keiner Zeit im Leben wird uns das geschenkt. Wir müssen etwas dafür tun. Auch im hohen Alter. Ausgewogene Ernährung und Bewegung - das würde wohl jeder raten. <br>
-                Du willst die U-Bahn Treppe hochgehen, ohne danach eine Pause zu brauchen? Du willst ohne Stöhnen von der Couch aufstehen? Du willst auch mit 80+ ohne Hilfe vom Klo aufstehen? Was hält dich zurück? Fang jetzt an.</p>
-                <p>Hier ist zündstoff</p>
-                <li>buche dein Free Intro</li>
-            </div> 
         </div>
-        <div id="lablec">
+        <div id="lablec_u">
             <div id="lablec_img">
-                
+                <div id="lablec_u_tart">
+                    <h1>nach der pandemie</h1>
+                    <p>Wir achten weiterhin auf Abstand und reinigen nach jedem Training unser Equipment.</p>
+                    <p>Komm bitte nur zum Training, wenn du dich gesund fühlst.</p>
+                </div>
             </div>
-            <div id="lab_l">
-
+        </div>
+        <div id="lablec_d">
+            <div id="lablec_d_tart">
+                <div id="lab_l">
+                    <h1>kontaktiere uns</h1>
+                    <p>E-Mail Adresse: hello@zuendstoffcrossfit.com <br>Telefon: 0175 3895976</p>
+                </div>
+                <div id="lab_c">
+                    <h1>besuche uns</h1>
+                    <p>Buckower Chaussee 110-113<br>12277 Berlin-Marienfelde</p>
+                </div>
+                <div id="lab_r">
+                    <h1>folge uns</h1>
+                    <div id="folge_img">
+                        <img src="feladat/képek/facebook-logo-facebook-logo-transparent-facebook-icon-transparent-free-free-png.webp" alt="">
+                        <img src="feladat/képek/free-instagram-logo-icon-3497-thumb.png" alt="">
+                        <img src="feladat/képek/lablec_logo.png" alt="">
+                    </div>
+                </div>
             </div>
-            <div id="lab_c">
-
-            </div>
-            <div id="lab_r">
-
-            </div>
-            <div id="lab_veg">
-                
-            </div>
+        </div>
+        <div id="lablec_veg">
+            <p>AGB | Impressum | Datenschultzerklärung | Logo- & Webdesign von Lisa Koch</p>
         </div>
     </div>
 </body>
