full screen igazitas, reszponzivitas kezdes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div id="box">
             <div id="box_tart">
                 <div id="box_video">
-                    <img src="feladat/képek/video.PNG" alt="">
+                    <img src="feladat/képek/video.PNG">
                 </div>
                 <div id="box_r">
                     <h1>die box</h1>
